# renda-chan

./: .gitignore  README.md  pyinstaller.spec  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  main.py
src/core/: app.py  config.py  container.py  logging.py
src/domain/: __init__.py  clicker.py  clicker_loop.py
src/infra/: hotkey_service.py  settings.py
src/tests/: test_clicker_loop.py
src/ui/: __init__.py  hotkey_capture.py  main_window.py
tests/: test_clicker_loop.py
